# applier

./: .gitignore  README.md  apply.py  index.html  justfile  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  tsconfig.json
css/: input.css
src/: apply.ts  index.ts  pdf.tsx  utils.ts
