[tool.poetry]
authors = ["magnusrodseth <59113973+magnusrodseth@users.noreply.github.com>"]
description = "Streamlining the process of making beautiful cover letters for companies."
name = "applier"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
md2pdf = "^0.5"
python = "^3.11"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
